force-app/main/default/objects/ERP_InboundBatch__c/ERP_InboundBatch__c.object-meta.xml
<CustomObject>
    <label>ERP InboundBatch</label>
    <nameField>
        <displayFormat>EIB-{00000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP InboundBatch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>