force-app/main/default/objects/ERP_InboundBatch__c/fields/BatchKey__c.field-meta.xml
<CustomField>
    <fullName>BatchKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>BatchKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>