force-app/main/default/objects/ERP_InboundBatch__c/fields/CompletedAt__c.field-meta.xml
<CustomField>
    <fullName>CompletedAt__c</fullName>
    <label>CompletedAt</label>
    <type>DateTime</type>
</CustomField>