force-app/main/default/objects/ERP_InboundBatch__c/fields/FirstSeenAt__c.field-meta.xml
<CustomField>
    <fullName>FirstSeenAt__c</fullName>
    <label>FirstSeenAt</label>
    <type>DateTime</type>
</CustomField>