force-app/main/default/objects/ERP_InboundBatch__c/fields/LastSeenAt__c.field-meta.xml
<CustomField>
    <fullName>LastSeenAt__c</fullName>
    <label>LastSeenAt</label>
    <type>DateTime</type>
</CustomField>