force-app/main/default/objects/ERP_InboundBatch__c/fields/ProcessingStartedAt__c.field-meta.xml
<CustomField>
    <fullName>ProcessingStartedAt__c</fullName>
    <label>ProcessingStartedAt</label>
    <type>DateTime</type>
</CustomField>