force-app/main/default/objects/ERP_InboundBatch__c/fields/ReceivedParts__c.field-meta.xml
<CustomField>
    <fullName>ReceivedParts__c</fullName>
    <label>ReceivedParts</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>