force-app/main/default/objects/ERP_InboundBatch__c/fields/TotalParts__c.field-meta.xml
<CustomField>
    <fullName>TotalParts__c</fullName>
    <label>TotalParts</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>